[gd_scene load_steps=38 format=1]

[ext_resource path="res://level/level2/game.gd" type="Script" id=1]
[ext_resource path="res://assets/levels/level1/bg2.png" type="Texture" id=2]
[ext_resource path="res://level/level2/spawners.gd" type="Script" id=3]
[ext_resource path="res://level/level2/batas.gd" type="Script" id=4]
[ext_resource path="res://level/level2/cursor.gd" type="Script" id=5]
[ext_resource path="res://assets/levels/cursor.tex" type="Texture" id=6]
[ext_resource path="res://level/level3/sprite_animasi.tres" type="SpriteFrames" id=7]
[ext_resource path="res://assets/levels/animasi_waktu.png" type="Texture" id=8]
[ext_resource path="res://assets/theme.tres" type="Theme" id=9]
[ext_resource path="res://assets/fonts/papercuts-2.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/levels/bakteri_indikator.png" type="Texture" id=11]
[ext_resource path="res://assets/levels/level3/plant_indicator_01.png" type="Texture" id=12]
[ext_resource path="res://assets/levels/level3/plant_over_01.png" type="Texture" id=13]
[ext_resource path="res://assets/levels/level3/plant_progress_01.png" type="Texture" id=14]
[ext_resource path="res://assets/bgm/Shoot/laser shot.ogg" type="AudioStream" id=15]
[ext_resource path="res://assets/tutorial/2.png" type="Texture" id=16]
[ext_resource path="res://assets/icons/settings/settings-tutup.png" type="Texture" id=17]
[ext_resource path="res://assets/icons/settings/settings-tutup-clicked.png" type="Texture" id=18]
[ext_resource path="res://assets/icons/settings/settings-tutup-hover.png" type="Texture" id=19]
[ext_resource path="res://level/sfxButton.tscn" type="PackedScene" id=20]
[ext_resource path="res://level/musikButton.tscn" type="PackedScene" id=21]
[ext_resource path="res://assets/icons/exit/exit1.png" type="Texture" id=22]
[ext_resource path="res://assets/icons/exit/exit-clicked1.png" type="Texture" id=23]
[ext_resource path="res://assets/icons/exit/exit-hover1.png" type="Texture" id=24]
[ext_resource path="res://assets/icons/menu/menu.png" type="Texture" id=25]
[ext_resource path="res://assets/icons/menu/menu-clicked.png" type="Texture" id=26]
[ext_resource path="res://assets/icons/menu/menu-hover.png" type="Texture" id=27]

[sub_resource type="Animation" id=1]

resource/name = "bgplay"
length = 36.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 12, 15.6, 24 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.574707, 0.578789, 0.835938, 1 ), Color( 0.633548, 0.635071, 0.440107, 1 ), Color( 0.370789, 0.878906, 0.509727, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:region_rect")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 12, 24, 36 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 720, 1280, 720 ), Rect2( 640, 240.167, 1280, 720 ), Rect2( 1280, 720, 1280, 720 ), Rect2( 0, 720, 1280, 720 ) ]
}

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 1272.82, -38.147, 1275.91, -35.0561, -22.2553, -35.0561 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( -22.2553, -35.0561, -25.6451, 723.162, -122.239, 721.033, -122.239, -119.807 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( -22.2553, -35.0561, -122.239, -119.807, 1376.4, -102.647, 1272.82, -38.147 )

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( 1272.82, -38.147, 1376.4, -102.647, 1376.24, -102.735 )

[sub_resource type="CircleShape2D" id=6]

custom_solver_bias = 0.0
radius = 71.3057

[sub_resource type="DynamicFont" id=7]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 10 )

[sub_resource type="GDScript" id=8]

resource/name = "tutupButton_pesan"
script/source = "#Built-in script

extends TextureButton

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass


func _on_tutupButton_pressed():
	if get_node(\"../sfxButton\").is_pressed():
		levels_singletons.set_sfx(true)
	else:
		levels_singletons.set_sfx(false)
	if get_node(\"../musikButton\").is_pressed():
		levels_singletons.set_bgm(true)
	else:
		levels_singletons.set_bgm(false)
	levels_singletons.do_save(utils.get_main_node())

	get_tree().set_pause(false)
	get_parent().set_hidden(true)
	Input.set_mouse_mode(Input.MOUSE_MODE_HIDDEN)
"

[sub_resource type="GDScript" id=9]

resource/name = "backToMenuButton"
script/source = "#Built-in script
extends TextureButton
func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass


func _on_backToMenuButton_pressed():
	get_tree().change_scene(\"res://mainmenu/mainmenu.tscn\")
	get_tree().set_pause(false)
"

[sub_resource type="DynamicFont" id=10]

font/size = 24
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 10 )

[node name="level2" type="Node"]

script/script = ExtResource( 1 )

[node name="env" type="Node2D" parent="."]

editor/display_folded = true

[node name="bg" type="Sprite" parent="env"]

editor/display_folded = true
material/use_parent = true
transform/pos = Vector2( 640, 360 )
z/relative = false
texture = ExtResource( 2 )
modulate = Color( 0, 0.929688, 1, 1 )
region = true
region_rect = Rect2( 0, 720, 1280, 720 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="env/bg"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/bgplay = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "bgplay"

[node name="layer_top" type="CanvasLayer" parent="env"]

layer = 3
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="spawners" type="Position2D" parent="env"]

script/script = ExtResource( 3 )
timeDelay = 2.0

[node name="batas" type="Area2D" parent="env"]

editor/display_folded = true
transform/pos = Vector2( 2.78951, 2.78951 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 3 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 4 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 5 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="env/batas"]

build_mode = 0
polygon = Vector2Array( -25.6451, 723.162, -122.239, 721.033, -122.239, -119.807, 1376.4, -102.647, 1376.24, -102.735, 1272.82, -38.147, 1275.91, -35.0561, -22.2553, -35.0561 )
shape_range = Vector2( 0, 3 )
trigger = false

[node name="cursor" type="Area2D" parent="env"]

editor/display_folded = true
transform/pos = Vector2( 66.6221, 25.9086 )
transform/scale = Vector2( 0.975282, 0.937345 )
input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 0.622599, -0.007741, 0.00808635, 0.650375, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="env/cursor"]

texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="env/cursor"]

transform/rot = 0.712342
transform/scale = Vector2( 0.622647, 0.650426 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="AnimatedSprite" type="AnimatedSprite" parent="env/cursor"]

visibility/behind_parent = true
transform/pos = Vector2( 3.16925, 0 )
frames = ExtResource( 7 )
animation = "laser hit"

[node name="Control" type="Control" parent="env"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 652.0
margin/top = 75.0
margin/right = 692.0
margin/bottom = 115.0

[node name="Sprite" type="Sprite" parent="env/Control"]

transform/scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 8 )
hframes = 4

[node name="lblTimer" type="Label" parent="env/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 9 )
margin/left = -22.0
margin/top = -17.0
margin/right = 18.0
margin/bottom = 27.0
text = "120"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="env/Control"]

process_mode = 1
wait_time = 50.0
one_shot = true
autostart = true

[node name="lblKill" type="Label" parent="env/Control"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -412.0
margin/top = -12.0
margin/right = -382.0
margin/bottom = 36.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "40"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureFrame" type="TextureFrame" parent="env/Control/lblKill"]

visibility/behind_parent = true
rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -108.0
margin/top = -12.0
margin/right = 125.0
margin/bottom = 86.0
texture = ExtResource( 11 )
stretch_mode = 0

[node name="progress" type="TextureProgress" parent="env/Control"]

rect/rotation = -90.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 104.0
margin/top = 21.0
margin/right = 130.0
margin/bottom = 233.0
range/min = 0.0
range/max = 40.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
texture/under = ExtResource( 12 )
texture/over = ExtResource( 13 )
texture/progress = ExtResource( 14 )
mode = 3
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="sfx" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 15 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="tutorial" type="Container" parent="."]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0

[node name="TextureFrame" type="TextureFrame" parent="tutorial"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0
texture = ExtResource( 16 )
stretch_mode = 0

[node name="tutupButton" type="TextureButton" parent="tutorial"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 550.0
margin/top = 582.0
margin/right = 734.0
margin/bottom = 673.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 17 )
textures/pressed = ExtResource( 18 )
textures/hover = ExtResource( 19 )
params/resize_mode = 0
params/scale = Vector2( 0.5, 0.5 )
params/stretch_mode = 0
script/script = SubResource( 8 )

[node name="sfxButton" parent="tutorial" instance=ExtResource( 20 )]

[node name="musikButton" parent="tutorial" instance=ExtResource( 21 )]

[node name="backToMenuButton" type="TextureButton" parent="tutorial"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1160.0
margin/top = 587.0
margin/right = 1275.2
margin/bottom = 702.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 22 )
textures/pressed = ExtResource( 23 )
textures/hover = ExtResource( 24 )
params/resize_mode = 0
params/scale = Vector2( 0.04, 0.04 )
params/stretch_mode = 0
script/script = SubResource( 9 )

[node name="Label" type="Label" parent="tutorial/backToMenuButton"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -108.0
margin/top = 23.0
margin/right = 13.0
margin/bottom = 105.0
custom_fonts/font = SubResource( 10 )
text = "Kembali ke Menu Utama"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pauseButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1090.0
margin/top = 30.0
margin/right = 1237.0
margin/bottom = 84.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 25 )
textures/pressed = ExtResource( 26 )
textures/hover = ExtResource( 27 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="timeout" from="env/Control/Timer" to="." method="_on_Timer_timeout"]

[connection signal="pressed" from="tutorial/tutupButton" to="tutorial/tutupButton" method="_on_tutupButton_pressed"]

[connection signal="pressed" from="tutorial/backToMenuButton" to="tutorial/backToMenuButton" method="_on_backToMenuButton_pressed"]

[connection signal="pressed" from="pauseButton" to="." method="_on_pauseButton_pressed"]


